# asset-servicing-ai-copilot

./: .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: analytics.py  audit.py  auth.py  copilot.py  documents.py  memory.py  operations.py  system.py  users.py
backend/app/security/: api_key_auth.py  rbac.py  token_auth.py
backend/app/services/: analytics_service.py  audit_log_service.py  auth_service.py  azure_blob_service.py  azure_search_service.py  azure_sql_service.py  chunking_service.py  cosmos_memory_service.py  create_tables.py  document_ingestion_service.py  domain_classifier_service.py  embedding_service.py  load_csv_to_sql.py  mcp_client_service.py  operational_context_service.py  operational_guidance_service.py  operations_data_service.py  operations_lookup_service.py  orchestrator_service.py  pdf_extraction_service.py  rag_answer_service.py  sql_schema.py  system_health_service.py  user_service.py  verify_sql_data.py
frontend/: .env.example  .gitignore
frontend/app/: page.tsx
mcp_server/: pyproject.toml
mcp_server/app/: backend_client.py  main.py
mcp_server/app/tools/: operations_tools.py
