[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cosmos>=4.16.1",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.30.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "mcp>=1.27.2",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
